Bug 242688 - Non-unified build fixes, early-ish July 2022 edition
Summary: Non-unified build fixes, early-ish July 2022 edition
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Adrian Perez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-07-13 06:45 PDT by Adrian Perez
Modified: 2022-07-14 01:43 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adrian Perez 2022-07-13 06:45:32 PDT
Summertime!
Comment 1 Adrian Perez 2022-07-13 16:07:03 PDT
Pull request: https://github.com/WebKit/WebKit/pull/2390
Comment 2 EWS 2022-07-14 01:42:31 PDT
Committed 252445@main (fa6290046ee6): <https://commits.webkit.org/252445@main>

Reviewed commits have been landed. Closing PR #2390 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-07-14 01:43:15 PDT
<rdar://problem/97000868>