Non-unified build fixes, early-ish July 2022 edition https://bugs.webkit.org/show_bug.cgi?id=242688

Unreviewed non-unified build fixes.

* Source/WebCore/html/ValidityState.h: Add missing HTMLElement.h header.
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp: Add
  missing FlexFormattingContext.h header.
* Source/WebCore/page/ResizeObservation.cpp: Add missing Logging.h header.
* Source/WebCore/rendering/RenderBlock.cpp: Add missing RenderGrid.h header.
* Source/WebCore/rendering/RenderLayer.cpp: Add missing
  wtf/IsoMallocInlines.h header.

Canonical link: https://commits.webkit.org/252445@main